--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pairs trader</title>
     <script async src="//jsfiddle.net/ue8zm1y6/164/embed/result/"></script>
 </head>
 <body>
